--- a/App/smart-park/src/app/shared/navbar/navbar.component.html
+++ b/App/smart-park/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar flex items-center justify-between px-6 py-4 shadow-lg bg-white dark:bg-gray-900 text-gray-800 dark:text-white">
+<nav class="navbar flex items-center justify-between px-6 py-4 shadow-lg bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-white">
   <div class="flex items-center space-x-3">
     <div class="w-12 h-12 rounded-full ring-2 ring-primary ring-offset-2 ring-offset-white dark:ring-offset-gray-900">
       <img src="assets/images.jpeg" alt="SmartPark Admin Logo" class="w-full h-full object-cover rounded-full" />
