--- a/App/smart-park/src/app/pages/admin/users/users.component.html
+++ b/App/smart-park/src/app/pages/admin/users/users.component.html
@@ -99,8 +99,8 @@
             </div>
           </div>
 
-          <div class="row">
-            <div class="col-md-6 mb-3" *ngIf="modalMode === 'add'">
+          <div class="row" *ngIf="modalMode === 'add'">
+            <div class="col-md-12 mb-3">
               <label class="form-label">
                 Password <span class="text-danger">*</span>
               </label>
@@ -109,7 +109,10 @@
                 Password must be at least 6 characters
               </div>
             </div>
-            <div class="col-md-6 mb-3">
+          </div>
+
+          <div class="row">
+            <div class="col-md-12 mb-3">
               <label class="form-label">Phone Number</label>
               <input type="text" class="form-control" formControlName="phoneNumber">
             </div>
