--- a/App/smart-park/src/app/shared/navbar/navbar.component.html
+++ b/App/smart-park/src/app/shared/navbar/navbar.component.html
@@ -1,25 +1,34 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/">SmartPark</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
+             data-bs-toggle="dropdown" aria-expanded="false"
+             (click)="toggleDropdown(); $event.preventDefault()">
             <img *ngIf="userProfile?.profileImageUrl" 
                  [src]="userProfile?.profileImageUrl" 
                  alt="Profile" 
                  class="rounded-circle me-2" 
                  style="width: 32px; height: 32px; object-fit: cover;">
-            <i *ngIf="!userProfile?.profileImageUrl" class="bi bi-person-circle"></i>
+            <i *ngIf="!userProfile?.profileImageUrl" class="bi bi-person-circle me-2"></i>
             {{ userName || 'User' }}
           </a>
-          <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" (click)="openProfileModal()" style="cursor: pointer;"><i class="bi bi-person"></i> Profile</a></li>
+          <ul class="dropdown-menu dropdown-menu-end" 
+              [class.show]="isDropdownOpen"
+              aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" (click)="openProfileModal(); isDropdownOpen = false" style="cursor: pointer;">
+              <i class="bi bi-person"></i> Profile
+            </a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" (click)="logout()" style="cursor: pointer;"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
+            <li><a class="dropdown-item" (click)="logout(); isDropdownOpen = false" style="cursor: pointer;">
+              <i class="bi bi-box-arrow-right"></i> Logout
+            </a></li>
           </ul>
         </li>
       </ul>
